--- a/resources/style.css
+++ b/resources/style.css
@@ -41,7 +41,6 @@ img
 	border-radius:8px;
 	transition:0.4s;
 	font-size:18px;
-	background-color:rgb(0,116,255);
 }
 
 .button:hover
@@ -56,3 +55,13 @@ img
 	.container{ text-align:center; }
 	img { width: 25%; }
 }
+
+.git  { background-color:rgb(0,116,255); }
+.ig	  {	background-image: linear-gradient(to right, rgb(181,30,194), rgb(30,74,192));}
+.ig:hover { background-image: none; moz-transition: 0.4s; -webkit-transition: 0.4s; transition: 0.4s;}
+.fb	  {	background-color:rgb(66,103,178);}
+.lin  {	background-color:#0072B1;	     }
+.yt	  {	background-color:rgb(255,0,0);	 }
+.tw	  {	background-color:#00ACEE;		 }
+.blog { background-color:#FC4F08;		 }
+.oth  { background-color:rgb(139,0,0);	 }
