--- a/resources/style.css
+++ b/resources/style.css
@@ -64,4 +64,5 @@ img
 .yt	  {	background-color:rgb(255,0,0);	 }
 .tw	  {	background-color:#00ACEE;		 }
 .blog { background-color:#FC4F08;		 }
+.tg { background-color:#0088CC; }
 .oth  { background-color:rgb(139,0,0);	 }
