--- a/resources/style.css
+++ b/resources/style.css
@@ -15,7 +15,7 @@ a
 	text-align:center;
 }
 
-img
+.header
 {
 	vertical-align:middle;
 	border-radius:80%;
@@ -53,16 +53,16 @@ img
 {
 	.centered { text-align:center; margin:none; width:100%; }
 	.container{ text-align:center; }
-	img { width: 25%; }
+	.header { width: 25%; }
 }
 
-.git  { background-color:rgb(0,116,255); }
-.ig	  {	background-image: linear-gradient(to right, rgb(181,30,194), rgb(30,74,192));}
-.ig:hover { background-image: none; moz-transition: 0.4s; -webkit-transition: 0.4s; transition: 0.4s;}
+.git  { background-color:#495057; 		 }
 .fb	  {	background-color:rgb(66,103,178);}
 .lin  {	background-color:#0072B1;	     }
 .yt	  {	background-color:rgb(255,0,0);	 }
 .tw	  {	background-color:#00ACEE;		 }
 .blog { background-color:#FC4F08;		 }
-.tg { background-color:#0088CC; }
+.tg   { background-color:#0088CC; 		 }
 .oth  { background-color:rgb(139,0,0);	 }
+.ig	      {	background-image: linear-gradient(to right, rgb(181,30,194), rgb(30,74,192));   		 }
+.ig:hover { background-image: none; moz-transition: 0.5s; -webkit-transition: 0.5s; transition: 0.5s;}
