--- a/resources/style.css
+++ b/resources/style.css
@@ -11,13 +11,14 @@ button
 {
 	cursor:pointer;	    width:100%;	        color:white;	    padding:10px;	
 	text-align:center;	border-radius:8px;	transition:0.4s;	font-size:18px;
+border:none;
 }
 
 @media screen and (max-width: 450px)
 {
 	.centered  { text-align:center; margin:none; width:100%; }
 	.container { text-align:center; }
-	.header    { width: 30%; }
+	.header    { width: 50%; }
 }
 
 .git  { background-color:#495057; 		 }
