--- a/resources/style.css
+++ b/resources/style.css
@@ -9,15 +9,15 @@ button:hover {	background-color:white;	color:black;  }
 
 button
 {
-	cursor:pointer;	    width:100%;	        color:white;	    padding:10px;	
+	cursor:pointer;	    width:100%;	        color:white;	    padding:10px;	border:none;
 	text-align:center;	border-radius:8px;	transition:0.4s;	font-size:18px;
 }
 
 @media screen and (max-width: 450px)
 {
-	.centered  { text-align:center; margin:none; width:100%; }
+	.centered  { width:100%; }
 	.container { text-align:center; }
-	.header    { width: 25%; }
+	img        { width: 30%; }
 }
 
 .git  { background-color:#495057; 		 }
