--- a/resources/style.css
+++ b/resources/style.css
@@ -28,7 +28,7 @@ border:none;
 .blog { background-color:#FC4F08;		 }
 .tg   { background-color:#0088CC; 		 }
 .oth  { background-color:rgb(139,0,0);	 }
-
+.qu { background-color:#A82400; }
 button, .centered  { font-family: 'Quicksand', sans-serif;       }
 label, .container  { font-family: 'Red Hat Display', sans-serif; }
 
