--- a/resources/style.css
+++ b/resources/style.css
@@ -10,7 +10,7 @@ button:hover {	background-color:white;	color:black;  }
 button 
 {
 	cursor:pointer;	    width:100%;	        color:white;	    padding:10px;	border:none;
-	text-align:center;	border-radius:8px;	transition:0.4s;	font-size:18px;
+	text-align:center;	border-radius:8px;	transition:0.4s;	font-size:18px; margin-bottom:20px;
 }
 
 @media screen and (max-width: 450px)
